[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "python-xforce"
version = "0.1.0"
description = "Python REPL with LLM-powered inline code suggestions. Accept with Tab or Right Arrow."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "prompt_toolkit>=3.0.43",
    "openai>=1.0.0",
]

[project.scripts]
python-xforce = "xforce:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.setuptools]
py-modules = ["xforce"]
